# TEI_Browser

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: architecture.md  contrat-html.md  fallback-audit.md
fixtures/correspondence/: lettre proust.xml
fixtures/manuscript/: uva.00058.xml
fixtures/poetry/: Son.xml  Tmp.xml
samples/: apparatus.xml  correspondence.xml  drama.xml  facsimile.xml  images.xml  malformed.xml  notes.xml  prose.xml  stress-mixed.xml  unknown-element.xml  verse.xml
scripts/: audit_fixtures.py
tei_reader/: __init__.py  __main__.py  cli.py
tei_reader/core/: document.py  service.py
tei_reader/diagnostics/: models.py
tei_reader/profiles/: loader.py
tei_reader/resources/css/: apparatus.css  base.css  correspondence.css  diagnostic.css  drama.css  verse.css
tei_reader/resources/profiles/: correspondence.json  diagnostic.json  drama.json  prose.json  verse.json
tei_reader/resources/xsl/: tei-common.xsl
tei_reader/transform/: engine.py  saxon_engine.py
tei_reader/ui/: app.py  pyside_app.py  webview_app.py
tei_reader/ui/assets/: app.css  app.js  index.html
tests/: snapshot_common.py  test_contract_sync.py  test_etape1.py  test_etape2.py  test_etape3.py  test_etape4.py  test_etape5.py  test_gui_app.py  test_pyside_app.py  test_render.py  test_snapshots.py  update_snapshots.py
tests/snapshots/: apparatus--diagnostic.html  correspondence--correspondence.html  drama--drama.html  facsimile--prose.html  images--prose.html  notes--prose.html  prose--prose.html  verse--verse.html
